// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card header component Renders properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardHeader
    cardStyles={
      Array [
        "secondary",
      ]
    }
    title="title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "cardStyles": Array [
        "secondary",
      ],
      "children": Array [
        <f1
          validate={undefined}
        />,
        <f1
          validate="title"
        >
          <CardTitle
            cardStyles={
              Array [
                "secondary",
              ]
            }
          >
            title
          </CardTitle>
        </f1>,
        <IconDiv
          cardStyles={
            Array [
              "secondary",
            ]
          }
        >
          <f1
            validate={undefined}
          >
            <Unknown
              icon={<Unknown />}
              link=""
              onClick={[Function]}
            />
          </f1>
        </IconDiv>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": undefined,
          "validate": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": <CardTitle
            cardStyles={
              Array [
                "secondary",
              ]
            }
          >
            title
          </CardTitle>,
          "validate": "title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "cardStyles": Array [
              "secondary",
            ],
            "children": "title",
          },
          "ref": null,
          "rendered": "title",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "cardStyles": Array [
            "secondary",
          ],
          "children": <f1
            validate={undefined}
          >
            <Unknown
              icon={<Unknown />}
              link=""
              onClick={[Function]}
            />
          </f1>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": <Unknown
              icon={<Unknown />}
              link=""
              onClick={[Function]}
            />,
            "validate": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "icon": <Unknown />,
              "link": "",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "cardStyles": Array [
          "secondary",
        ],
        "children": Array [
          <f1
            validate={undefined}
          />,
          <f1
            validate="title"
          >
            <CardTitle
              cardStyles={
                Array [
                  "secondary",
                ]
              }
            >
              title
            </CardTitle>
          </f1>,
          <IconDiv
            cardStyles={
              Array [
                "secondary",
              ]
            }
          >
            <f1
              validate={undefined}
            >
              <Unknown
                icon={<Unknown />}
                link=""
                onClick={[Function]}
              />
            </f1>
          </IconDiv>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": undefined,
            "validate": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": <CardTitle
              cardStyles={
                Array [
                  "secondary",
                ]
              }
            >
              title
            </CardTitle>,
            "validate": "title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "cardStyles": Array [
                "secondary",
              ],
              "children": "title",
            },
            "ref": null,
            "rendered": "title",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "cardStyles": Array [
              "secondary",
            ],
            "children": <f1
              validate={undefined}
            >
              <Unknown
                icon={<Unknown />}
                link=""
                onClick={[Function]}
              />
            </f1>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "children": <Unknown
                icon={<Unknown />}
                link=""
                onClick={[Function]}
              />,
              "validate": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "icon": <Unknown />,
                "link": "",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card header component Renders with custom header 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardHeader
    cardStyles={
      Array [
        "secondary",
      ]
    }
    customHeaderComponent={
      <div>
        hi
      </div>
    }
    title="title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "cardStyles": Array [
        "secondary",
      ],
      "children": Array [
        <f1
          validate={
            <div>
              hi
            </div>
          }
        >
          <div>
            hi
          </div>
        </f1>,
        <f1
          validate={false}
        >
          <CardTitle
            cardStyles={
              Array [
                "secondary",
              ]
            }
          >
            title
          </CardTitle>
        </f1>,
        <IconDiv
          cardStyles={
            Array [
              "secondary",
            ]
          }
        >
          <f1
            validate={undefined}
          >
            <Unknown
              icon={<Unknown />}
              link=""
              onClick={[Function]}
            />
          </f1>
        </IconDiv>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": <div>
            hi
          </div>,
          "validate": <div>
            hi
          </div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "hi",
          },
          "ref": null,
          "rendered": "hi",
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": <CardTitle
            cardStyles={
              Array [
                "secondary",
              ]
            }
          >
            title
          </CardTitle>,
          "validate": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "cardStyles": Array [
              "secondary",
            ],
            "children": "title",
          },
          "ref": null,
          "rendered": "title",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "cardStyles": Array [
            "secondary",
          ],
          "children": <f1
            validate={undefined}
          >
            <Unknown
              icon={<Unknown />}
              link=""
              onClick={[Function]}
            />
          </f1>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": <Unknown
              icon={<Unknown />}
              link=""
              onClick={[Function]}
            />,
            "validate": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "icon": <Unknown />,
              "link": "",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "cardStyles": Array [
          "secondary",
        ],
        "children": Array [
          <f1
            validate={
              <div>
                hi
              </div>
            }
          >
            <div>
              hi
            </div>
          </f1>,
          <f1
            validate={false}
          >
            <CardTitle
              cardStyles={
                Array [
                  "secondary",
                ]
              }
            >
              title
            </CardTitle>
          </f1>,
          <IconDiv
            cardStyles={
              Array [
                "secondary",
              ]
            }
          >
            <f1
              validate={undefined}
            >
              <Unknown
                icon={<Unknown />}
                link=""
                onClick={[Function]}
              />
            </f1>
          </IconDiv>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": <div>
              hi
            </div>,
            "validate": <div>
              hi
            </div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "hi",
            },
            "ref": null,
            "rendered": "hi",
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": <CardTitle
              cardStyles={
                Array [
                  "secondary",
                ]
              }
            >
              title
            </CardTitle>,
            "validate": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "cardStyles": Array [
                "secondary",
              ],
              "children": "title",
            },
            "ref": null,
            "rendered": "title",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "cardStyles": Array [
              "secondary",
            ],
            "children": <f1
              validate={undefined}
            >
              <Unknown
                icon={<Unknown />}
                link=""
                onClick={[Function]}
              />
            </f1>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "children": <Unknown
                icon={<Unknown />}
                link=""
                onClick={[Function]}
              />,
              "validate": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "icon": <Unknown />,
                "link": "",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card header component Renders with expandable props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardHeader
    cardStyles={
      Array [
        "secondary",
      ]
    }
    expandable={true}
    link="/"
    title="title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "cardStyles": Array [
        "secondary",
      ],
      "children": Array [
        <f1
          validate={undefined}
        />,
        <f1
          validate="title"
        >
          <CardTitle
            cardStyles={
              Array [
                "secondary",
              ]
            }
          >
            title
          </CardTitle>
        </f1>,
        <IconDiv
          cardStyles={
            Array [
              "secondary",
            ]
          }
        >
          <f1
            validate={true}
          >
            <Unknown
              icon={<Unknown />}
              link="/"
              onClick={[Function]}
            />
          </f1>
        </IconDiv>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": undefined,
          "validate": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": <CardTitle
            cardStyles={
              Array [
                "secondary",
              ]
            }
          >
            title
          </CardTitle>,
          "validate": "title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "cardStyles": Array [
              "secondary",
            ],
            "children": "title",
          },
          "ref": null,
          "rendered": "title",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "cardStyles": Array [
            "secondary",
          ],
          "children": <f1
            validate={true}
          >
            <Unknown
              icon={<Unknown />}
              link="/"
              onClick={[Function]}
            />
          </f1>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": <Unknown
              icon={<Unknown />}
              link="/"
              onClick={[Function]}
            />,
            "validate": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "icon": <Unknown />,
              "link": "/",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "cardStyles": Array [
          "secondary",
        ],
        "children": Array [
          <f1
            validate={undefined}
          />,
          <f1
            validate="title"
          >
            <CardTitle
              cardStyles={
                Array [
                  "secondary",
                ]
              }
            >
              title
            </CardTitle>
          </f1>,
          <IconDiv
            cardStyles={
              Array [
                "secondary",
              ]
            }
          >
            <f1
              validate={true}
            >
              <Unknown
                icon={<Unknown />}
                link="/"
                onClick={[Function]}
              />
            </f1>
          </IconDiv>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": undefined,
            "validate": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "children": <CardTitle
              cardStyles={
                Array [
                  "secondary",
                ]
              }
            >
              title
            </CardTitle>,
            "validate": "title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "cardStyles": Array [
                "secondary",
              ],
              "children": "title",
            },
            "ref": null,
            "rendered": "title",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "cardStyles": Array [
              "secondary",
            ],
            "children": <f1
              validate={true}
            >
              <Unknown
                icon={<Unknown />}
                link="/"
                onClick={[Function]}
              />
            </f1>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "children": <Unknown
                icon={<Unknown />}
                link="/"
                onClick={[Function]}
              />,
              "validate": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "icon": <Unknown />,
                "link": "/",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
